Add styling to index carousel

--- a/book_table/templates/book_table/index.html
+++ b/book_table/templates/book_table/index.html
@@ -4,90 +4,94 @@
 
 
 <section>
-    <div class="row logo no-gutters">
-      <div class="col">
-        <div class="picture-title salmon-color">
-            <h1>DreamPoke</h1>
-            <h2>From hawaii, to you.</h2>
-            <!--https://www.pexels.com/photo/brown-mountains-2559941/-->
-          </div>
-        </div>
-    </div>
-</section>
-
-<section class="cream-colour text-center">
-    <div class="row no-gutters">
-      <div class="col-12 col-md-4">
-        <div class="row">
-          <div class="col-12">
-            <img src="../static/images/poke-sauce.jpg" class="poke-image" alt="Poke bowl">
-          </div>
-        </div>
+  <div class="row logo no-gutters">
+    <div class="col">
+      <div class="picture-title salmon-color">
+        <h1>PokeDream</h1>
+        <p>Deep from hawaii, for you to enjoy</p>
+        <!--https://www.pexels.com/photo/brown-mountains-2559941/-->
       </div>
-      <div class="col-12 col-md-8">
-        <div class="row">
-      <div class="col-12 col-md-6 p-5">
-        <h3><i class="fa-solid fa-seedling"></i> Fresh </h3>
-        <p>All our ingredients are fresh. By this we mean straight from the local market to your bowl. 
-          You can feel the vitality of each ingredient in every bite, making you feel energised.
-        </p>
-      </div>
-      <div class="col-12 col-md-6 p-5">
-        <h3><i class="fa-solid fa-bolt"></i> Nutrient dense</h3>
-        <p> We choose our ingredients carfeully, making sure we cover the whole spectrum of micronutrients. 
-          Our options are full of "superfoods" and high quality proteins.
-        </p>
-      </div>
-      <div class="col-12 col-md-6 p-5">
-        <h3><i class="fa-solid fa-utensils"></i> Diet options</h3>
-        <p>We now how much effort you put into following a regime, so no need to worry when you come to
-          our restaurant! We have options for everyone: vegan, ketogenic, paleo... Check out our menu!
-        </p>
-      </div>
-      <div class="col-12 col-md-6 p-5">
-        <h3><i class="fa-solid fa-leaf"></i> Eco-friendly</h3>
-        <p>We reduce our impact on the planet as much as possible. The vegetables and meats come from local 
-          suppliers. The plastics used for our takeway bowls is recycled and can be recycled again after it's been used.
-        </p>
-      </div>
-    </div>
     </div>
   </div>
-  </section>
+</section>
 
-  <section class="pt-5">
-    <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center " data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h3>Check out our menu!</h3>
-          <p>From vegan to ketogenic, we can satisfy all types of diet</p>
-          <button>Menu</button>
-        </div>
-        <div class="carousel-item">
-          <h3>Make a reservation</h3>
-          <p>Book a table with us, come and enjoy our delicious bowls</p>
-          <button> Book a table</button>
-        </div>
-        <div class="carousel-item">
-          <h3>Contact information </h3>
-          <p>What to contact us? All our info here!</p>
-          <button>Contact</button>
+<section class="info-carousel cream-filter">
+  <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center salmon-color  "
+    data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner carousel-postion-1">
+      <div class="carousel-item active">
+        <h3><i class="fa-solid fa-carrot"></i> Check out our menu</h3>
+        <p>From vegan to ketogenic, we can satisfy all types of diet</p>
+        <button type="button" class="btn btn-light">Menu</button>
+      </div>
+      <div class="carousel-item">
+        <h3><i class="fa-solid fa-utensils"></i> Make a reservation</h3>
+        <p>Book a table with us, come and enjoy our delicious bowls</p>
+        <button type="button" class="btn btn-light"> Book a table</button>
+      </div>
+      <div class="carousel-item">
+        <h3><i class="fa-solid fa-address-book"></i> Contact information </h3>
+        <p>What to contact us? All our info here!</p>
+        <button type="button" class="btn btn-light">Contact</button>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</section>
+
+<section class="cream-colour">
+  <div class="row no-gutters">
+    <div class="col-12 col-sm-4">
+      <div class="row no-gutters poke-image">
+        <div class="col-12">
+          
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-  </section>
+    <div class="col-12 col-sm-8 p-5">
+      <div class="row no-gutters">
+        <div class="col-12 col-md-6 p-3">
+          <h3><i class="fa-solid fa-seedling"></i> Fresh </h3>
+          <p>All our ingredients are fresh. By this we mean straight from the local market to your bowl.
+            You can feel the vitality of each ingredient in every bite, making you feel energised.
+          </p>
+        </div>
+        <div class="col-12 col-md-6 p-3">
+          <h3><i class="fa-solid fa-bolt"></i> Nutrient dense</h3>
+          <p> We choose our ingredients carfeully, making sure we cover the whole spectrum of micronutrients.
+            Our options are full of "superfoods" and high quality proteins.
+          </p>
+        </div>
+        <div class="col-12 col-md-6 p-3">
+          <h3><i class="fa-solid fa-utensils"></i> Diet options</h3>
+          <p>We now how much effort you put into following a regime, so no need to worry when you come to
+            our restaurant! We have options for everyone: vegan, ketogenic, paleo... Check out our menu!
+          </p>
+        </div>
+        <div class="col-12 col-md-6 p-3">
+          <h3><i class="fa-solid fa-leaf"></i> Eco-friendly</h3>
+          <p>We reduce our impact on the planet as much as possible. The vegetables and meats come from local
+            suppliers. The plastics used for our takeway bowls is recycled and can be recycled again after it's been
+            used.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 {%endblock%}
