--- a/book_table/static/css/style.css
+++ b/book_table/static/css/style.css
@@ -22,6 +22,10 @@
     background-color: rgba(255,240,201,1);
 }
 
+.cream-filter {
+    background-color: rgba(255,240,201,0.5);
+}
+
 .salmon-text {
     color: rgba(254,111,97,0.95);
 }
@@ -57,18 +61,32 @@
 }
 
 .poke-image {
+    background: url("../images/poke-sauce.jpg");
     background-repeat: no-repeat;
     width: 100%;
+    height: 100%;
+    min-height: 550px;
+    background-size: cover;
+    background-position: center;
 }
 
+.info-carousel {
+    height: 700px;
+}
 /*--------Container carrousel-------------*/
 .carousel-outter {
-    height: 490px;
+    height: 350px;
+    top: 25%;
     width: 90%;
     max-width: 650px;
     margin: auto;
     overflow: hidden;
     border-radius: 15px;
+}
+
+.carousel-postion-1 {
+    position: absolute;
+    top:25%;
 }
 
 /*--------Menu page-------------*/
