--- a/book_table/templates/book_table/base.html
+++ b/book_table/templates/book_table/base.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="{% url 'menu' %}">Menu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Log In</a>
