Style logging pages and add logout modal

--- a/book_table/templates/base.html
+++ b/book_table/templates/base.html
@@ -26,9 +26,18 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'menu' %}">Menu</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
-            </li>
+            {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="modal" data-target="#exampleModal">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    {% endif %}
           </ul>
         </div>
       </nav>
@@ -37,6 +46,33 @@
 {% block content %}
 <!-- Content Goes here -->
 {% endblock content %}
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to logout?</p>
+        <form method="post" action="{% url 'account_logout' %}">
+          {% csrf_token %}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+          {% endif %}
+          <button class="btn btn-danger" type="submit">Sign Out</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <footer class="container-fluid text-center mt-4 pt-4  navbar-dark bg-dark">
   <div class="row">
@@ -63,6 +99,8 @@
           </li>
   </div>
 </div>
+
+
 </footer>
 
   <script src="https://kit.fontawesome.com/0393cc7668.js" crossorigin="anonymous"></script>
