Add Edit functionality to bookings

--- a/book_table/templates/base.html
+++ b/book_table/templates/base.html
@@ -31,6 +31,9 @@
                       <a class="nav-link" href="{% url 'booking' %}">Table booking</a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" href="{% url 'mybookings' %}">My bookings</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" data-toggle="modal" data-target="#exampleModal">Logout</a>
                     </li>
                     {% else %}
