--- a/book_table/templates/edit_booking.html
+++ b/book_table/templates/edit_booking.html
@@ -11,7 +11,7 @@
 
           
           
-          <h3 class="display-4">Book a table</h3>
+          <h3 class="display-4">Edit your booking</h3>
           <div class="row">
             <div class="col-md-6">
               <div class="card" style="width: 18rem;">
@@ -59,7 +59,7 @@
     </div>
 </div>
 </div>
-
+</div>
 
 
 
