--- a/book_table/templates/edit_booking.html
+++ b/book_table/templates/edit_booking.html
@@ -10,7 +10,6 @@
           {% include 'messages.html' %}
 
           
-          
           <h3 class="display-4">Edit your booking</h3>
           <div class="row">
             <div class="col-md-6">
@@ -18,12 +17,12 @@
                 <div class="card-body">
                   <h5 class="card-title">Make your reservation</h5>
                   <p class="card-text">
-                    <form class='mt-5' method='post' action="booking">
+                    <form class='mt-5' method='post'>
                       {% csrf_token %}
                       {{ form.as_p }}
                           <div>
                               <p>
-                                  <button type="submit" class="btn btn-dark">Add reservation</button>
+                                  <button type="submit" class="btn btn-dark">Edit booking</button>
                               </p>
                           </div>
                   </form>
@@ -37,8 +36,8 @@
                 <div class="card-body">
                   <h5 id='card-title-id' class="card-title">List of booked tables on:</h5>
                   <h6 id="date-selection" class="card-subtitle mb-2 text-muted">Select a date</h6>
-                {% if reservations %}
-                {% for x in reservations %}
+                {% if bookings %}
+                {% for x in bookings %}
                 <p data-type="{{x.date|date:'Y-m-d'}}" class="card-text list-group-item reservation-info">
                   Time: {{x.time}} Table nº {{x.table_id}}
                 </p>
