--- a/book_table/templates/mybooking.html
+++ b/book_table/templates/mybooking.html
@@ -23,12 +23,14 @@
               </div>
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
-                  <p>Date: {{reservation.date}} | Time: {{reservation.time}} | Number of people: {{reservation.table.number_of_seats}} </p>
+                  <p>Date: {{reservation.date}} | Time: {{reservation.time}} | Number of people: {{reservation.table.number_of_seats}} | Id: {{ reservation.id }}</p>
                   <a href="/edit_booking/{{ reservation.id }}" class="btn btn-secondary">Edit</a> 
-                  <a href="/edit/{{ item.id }}" class="btn btn-danger">Delete</a> 
+                  <a href="/delete_booking/{{ reservation.id }}" class="btn btn-danger">Delete</a> 
                 </div>
               </div>
             </div>
+            {% empty %}
+            <p>No reservations</p>
         {% endfor %}
         
           
