--- a/book_table/templates/mybooking.html
+++ b/book_table/templates/mybooking.html
@@ -6,43 +6,75 @@
 <div class="container">
   <div class="row">
     <div class="col mt-5 ">
-        <div class="jumbotron">
-          {% include 'messages.html' %}
+      <div class="jumbotron">
+        {% include 'messages.html' %}
 
 
-          {% for reservation in reservations%}
-          <div class="accordion" id="accordionExample">
-            <div class="card">
-              <div class="card-header" id="headingOne">
-                <h2 class="mb-0">
-                  <button class="btn btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Reservation 
-                    <i class="fas fa-caret-down"></i>
-                  </button>
-                </h2>
+        {% for reservation in reservations%}
+        <div class="accordion" id="accordionExample">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button class="btn btn-block text-left" type="button" data-toggle="collapse"
+                  data-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapseOne">
+                  Reservation | Date: {{reservation.date}}
+                  <i class="fas fa-caret-down"></i>
+                </button>
+              </h2>
+            </div>
+            <div id="collapse{{ forloop.counter }}" class="collapse" aria-labelledby="headingOne"
+              data-parent="#accordionExample">
+              <div class="card-body">
+                <p>Time: {{reservation.time}} | Number of people: {{reservation.table.number_of_seats}} | Id:
+                  {{ reservation.id }}</p>
+                <a href="/edit_booking/{{ reservation.id }}" class="btn btn-secondary">Edit</a>
+
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop">
+                  Delete
+                </button>
               </div>
-              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body">
-                  <p>Date: {{reservation.date}} | Time: {{reservation.time}} | Number of people: {{reservation.table.number_of_seats}} | Id: {{ reservation.id }}</p>
-                  <a href="/edit_booking/{{ reservation.id }}" class="btn btn-secondary">Edit</a> 
-                  <a href="/delete_booking/{{ reservation.id }}" class="btn btn-danger">Delete</a> 
+            </div>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Are you sure you want to delete your reservation?
+                </div>
+                <div class="modal-footer">
+                  <a href="/delete_booking/{{ reservation.id }}" class="btn btn-danger">
+                    Delete
+                  </a>
                 </div>
               </div>
             </div>
-            {% empty %}
-            <p>No reservations</p>
-        {% endfor %}
-        
-          
+          </div>
+          {% empty %}
+          <p>No reservations</p>
+          {% endfor %}
+
+
+
+
+
         </div>
-     
-  </div>
+
+      </div>
     </div>
+  </div>
 </div>
-</div>
 
 
 
 
-  
+
+
 {%endblock%}
