--- a/book_table/templates/index.html
+++ b/book_table/templates/index.html
@@ -6,7 +6,7 @@
 <section>
   <div class="row logo no-gutters">
     <div class="col">
-      <div class="picture-title salmon-color">
+      <div class="picture-title white-text dark-brown">
         <h1>PokeDream</h1>
         <p>Deep from hawaii, for you to enjoy</p>
         <!--https://www.pexels.com/photo/brown-mountains-2559941/-->
@@ -16,7 +16,8 @@
 </section>
 
 <section class="info-carousel cream-filter">
-  <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center salmon-color  "
+
+  <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center white-text dark-brown  "
     data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -48,10 +49,10 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
+</div>
 </section>
 
-<section class="cream-colour">
+<section class="info-values cream-colour">
   <div class="row no-gutters">
     <div class="col-12 col-sm-4">
       <div class="row no-gutters poke-image">
