--- a/book_table/templates/menu.html
+++ b/book_table/templates/menu.html
@@ -4,7 +4,7 @@
 <section>
   <div class="row menu-header m-0 no-gutters">
     <div class="col salmon-filter">
-      <div class="picture-title salmon-color">
+      <div class="picture-title  white-text dark-brown">
         <h1>Pokedream menu</h1>
         <p>Check out our delicious ingredients</p>
       </div>
@@ -54,7 +54,7 @@
     <div class="row no-gutters">
         <div class="col pt-5">
           
-            <div id="carouselExampleIndicators" class="carousel slide carousel-menu salmon-color" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide carousel-menu  white-text dark-brown" data-ride="carousel">
               <h3 class="text-center pb-4 pt-2">Make your own poke:</h3>
                 <ol class="carousel-indicators no-bullet">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -139,17 +139,25 @@
 
 <section class="allergen cream-colour p-5">
   <h2 class="text-center">Allergens</h2>
-  <div class="row no-gutters m-0">
-    <div class="col-md-6">
+  <div class="row no-gutters m-0" >
+    <div class="col-md-6 mt-5">
         <p class="text-center allergen-size"><i class="fa-solid fa-seedling "></i> Vegan</p>
         <p class="text-center allergen-size"><i class="fa-solid fa-fish"></i> Fish</p>
         <p class="text-center allergen-size"><i class="fa-solid fa-egg"></i> Egg </p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 mt-5">
         <p class="text-center allergen-size"><i class="fa-solid fa-wheat-awn"></i> Gluten </p>
         <p class="text-center allergen-size"><i class="fa-solid fa-shrimp"></i> Crustacean</p>
         <p class="text-center allergen-size"><i class="fa-solid fa-cheese"></i> Dairy</p>
     </div>
+    <div class="text-center row">
+      <div class="text-center col">
+        <p class=" mt-4">
+          Allergens: Attention customers with food allergies. Please be aware that our food may contain or come into contact with common allergens,
+          such as dairy, eggs, wheat, soybeans, tree nuts, peanuts, fish, shellfish or wheat. </p>
+      </div>
+    </div>
+    
 </section>
 
 {%endblock%}
