--- a/book_table/templates/messages.html
+++ b/book_table/templates/messages.html
@@ -1,9 +1,9 @@
 {% for message in messages %}
 
-<div class="container-fluid p-0">
+<div class="container p-0 mt-4">
   <div class="alert {{ message.tags }} alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">×</span>
+      <span aria-hidden="true">x</span>
     </button>
     {{ message }}
   </div>
