--- a/book_table/templates/menu.html
+++ b/book_table/templates/menu.html
@@ -50,11 +50,11 @@
   </div>
 </div>
 </section>
-<section id='make-your-poke' class="pt-5 pb-5 dark-brown">
+<section id='make-your-poke' class="pt-5 pb-5">
     <div class="row no-gutters">
         <div class="col pt-5">
           
-            <div id="carouselExampleIndicators" class="carousel slide carousel-menu  white-text dark-brown" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide carousel-menu text-white dark-brown" data-ride="carousel">
               <h3 class="text-center pb-4 pt-2">Make your own poke:</h3>
                 <ol class="carousel-indicators no-bullet">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
