--- a/book_table/templates/base.html
+++ b/book_table/templates/base.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">PokeDream</a>
+      <a class="navbar-brand" href="{% url 'index' %}">PokeDream</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,29 +24,29 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'menu' %}">Menu</a>
+            <a class="nav-link {% if request.path == '/menu' %}active{% endif %}" href="{% url 'menu' %}">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            <a class="nav-link {% if request.path == '/contact' %}active{% endif %}" href="{% url 'contact' %}">Contact</a>
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'booking' %}">Table booking</a>
+            <a class="nav-link {% if request.path == '/booking' %}active{% endif %}" href="{% url 'booking' %}">Table booking</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'mybookings' %}">My bookings</a>
+            <a class="nav-link {% if request.path == '/mybookings' %}active{% endif %}" href="{% url 'mybookings' %}">My bookings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="#" data-toggle="modal" data-target="#exampleModal">Logout</a>
           </li>
           {% else %}
-          <li class="nav-item">
+          <li class="nav-item {% if request.path == '/accounts/signup/' %}active{% endif %}">
             <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if request.path == '/accounts/login/' %}active{% endif %}">
             <a class="nav-link" href="{% url 'account_login' %}">Login</a>
           </li>
           {% endif %}
@@ -89,30 +89,12 @@
   </div>
 
   <footer class="container-fluid text-center  pt-4  navbar-dark bg-dark">
-    <div class="row">
-      <div class="col-12">
-        <h5>Hawaii is closer than you think </h5>
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a target="_blank" href="#">
-              <i class="fa-brands fa-linkedin"></i>
-              <span class="sr-only">Linkedin</span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="#">
-              <i class="fa-brands fa-github"></i>
-              <span class="sr-only">Github</span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="#">
-              <i class="fa-brands fa-spotify"></i>
-              <span class="sr-only">Spotify</span>
-            </a>
-          </li>
-      </div>
-    </div>
+    <a href="https://facebook.com" target="_blank" rel="noopener"
+    aria-label="visit our Facebook page (opens in a new page)"><i class="fab fa-facebook"></i></a>
+<a href="https://twitter.com" target="_blank" rel="noopener"
+    aria-label="visit our Twitter page (opens in a new page)"><i class="fab fa-twitter"></i></a>
+<a href="https://instagram.com" target="_blank" rel="noopener"
+    aria-label="visit our Instgram page (opens in a new page)"><i class="fab fa-instagram"></i></a>
 
 
   </footer>
