--- a/book_table/templates/base.html
+++ b/book_table/templates/base.html
@@ -89,12 +89,24 @@
   </div>
 
   <footer class="container-fluid text-center  pt-4  navbar-dark bg-dark">
-    <a href="https://facebook.com" target="_blank" rel="noopener"
-    aria-label="visit our Facebook page (opens in a new page)"><i class="fab fa-facebook"></i></a>
-<a href="https://twitter.com" target="_blank" rel="noopener"
-    aria-label="visit our Twitter page (opens in a new page)"><i class="fab fa-twitter"></i></a>
-<a href="https://instagram.com" target="_blank" rel="noopener"
-    aria-label="visit our Instgram page (opens in a new page)"><i class="fab fa-instagram"></i></a>
+    <div class="row">
+      <div class="col-12">
+        <h5 class="text-white">Hawaii is closer than you think </h5>
+        <ul class="list-inline">
+          <li class="list-inline-item footer-link">
+            <a target="_blank" href="https://www.instagram.com/">
+              <i class="fa-brands fa-instagram"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+          <li class="list-inline-item footer-link">
+            <a target="_blank" href="https://www.facebook.com/">
+              <i class="fa-brands fa-facebook"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+          </li>
+      </div>
+    </div>
 
 
   </footer>
