--- a/book_table/templates/contact.html
+++ b/book_table/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section class="cream-colour contact-section">
+<section class="contact-section">
     <div class="container ">
         <div class="row pt-5 pb-5">
             <div class="col">
@@ -10,7 +10,7 @@
                     <h1 class="display-4">Contact information</h1>
                     <p class="lead">Here you can find our contact information, don't doubt to contact us with any doubt</p>
                     <hr class="my-4">
-                    <ul>
+                    <ul class="no-bullet">
                         <li><i class="fa-solid fa-phone"></i> +34 555 555 555</li>
                         <li><i class="fa-solid fa-calendar-days"></i> Monday to Sunday | 13:00-23:00</li>
                         <li><i class="fa-solid fa-location-dot"></i> Plaza Moyua, Bilbao, Spain, 48100</li>
