--- a/book_table/templates/index.html
+++ b/book_table/templates/index.html
@@ -15,7 +15,7 @@
   </div>
 </section>
 
-<section class="info-carousel cream-filter">
+<section class="info-carousel salmon-color">
 
   <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center white-text dark-brown  "
     data-ride="carousel">
@@ -58,7 +58,7 @@
 </div>
 </section>
 
-<section class="info-values cream-colour">
+<section class="info-values">
   <div class="row no-gutters">
     <div class="col-12 col-sm-4">
       <div class="row no-gutters poke-image">
