--- a/book_table/templates/menu.html
+++ b/book_table/templates/menu.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 </section>
-<section id="made-poke" class="cream-colour">
+<section id="made-poke">
   <h3 class="text-center">Already made poke</h3>
 
 <div class="row no-gutters">
@@ -137,7 +137,7 @@
     </div>
 </section>
 
-<section class="allergen cream-colour p-5">
+<section class="allergen p-5">
   <h2 class="text-center">Allergens</h2>
   <div class="row no-gutters m-0" >
     <div class="col-md-6 mt-5">
