--- a/book_table/templates/table_booking.html
+++ b/book_table/templates/table_booking.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+<section>
 <div class="container">
   <div class="row">
     <div class="col mt-5 ">
@@ -12,9 +12,9 @@
         <div class="row">
           <div class="col-md-6">
             <div class="card" style="width: 18rem;">
-              <div class="card-body">
+              <div class="card-body card-height">
                 <h5 class="card-title">Make your reservation</h5>
-                <p class="card-text">
+                <p class="card-text ">
                   <form class='mt-5' method='post' action="booking">
                     {% csrf_token %}
                     {{ form.as_p }}
@@ -31,22 +31,18 @@
           <div class="col-md-6">
 
             <div class="card" style="width: 18rem;">
-              <div class="card-body">
+              <div class="card-body card-height">
                 <h5 id='card-title-id' class="card-title">List of booked tables on:</h5>
                 <h6 id="date-selection" class="card-subtitle mb-2 text-muted">Select a date</h6>
-                {% if reservations %}
                 {% for x in reservations %}
+                
                 <p data-type="{{x.date|date:'Y-m-d'}}" class="card-text list-group-item reservation-info">
                   Time: {{x.time}} Table nº {{x.table_id}}
                 </p>
-
-
-
-                {% endfor %}
-                {% else %}
+                {% empty %}
                 <p class="card-text">All tables are free!</p>
 
-                {% endif %}
+                {% endfor %}
               </div>
             </div>
 
@@ -57,5 +53,6 @@
     </div>
   </div>
 </div>
+</section>
 
   {%endblock%}
