Add wireframes to README file

--- a/book_table/templates/edit_booking.html
+++ b/book_table/templates/edit_booking.html
@@ -6,11 +6,12 @@
     <div class="col mt-5 ">
       <div class="jumbotron">
         <h3 class="display-4">Edit your booking</h3>
+        <hr class="my-4">
         <div class="row">
           <div class="col-md-6">
             <div class="card" style="width: 18rem;">
               <div class="card-body">
-                <h5 class="card-title">Make your reservation</h5>
+                <h5 class="card-title">Select your preferences</h5>
                 <p class="card-text">
                   <form class='mt-5' method='post'>
                     {% csrf_token %}
