--- a/book_table/templates/menu.html
+++ b/book_table/templates/menu.html
@@ -12,7 +12,7 @@
   </div>
 </section>
 <section id="made-poke">
-  <h3 class="text-center">Already made poke</h3>
+  <h3 class="text-center">Our regular pokes</h3>
 
 <div class="row no-gutters">
   <div class="col">
