--- a/book_table/templates/mybooking.html
+++ b/book_table/templates/mybooking.html
@@ -7,6 +7,9 @@
   <div class="row">
     <div class="col mt-5 ">
       <div class="jumbotron jumbo-height">
+          <h1 class="display-4">Your bookings</h1>
+          <p>On this page, you can access your reservations, review the details, make modifications or cancel the booking.</p>
+          <hr class="my-4">
         {% for reservation in reservations%}
         <div class="accordion" id="accordionExample">
           <div class="card">
