--- a/book_table/templates/table_booking.html
+++ b/book_table/templates/table_booking.html
@@ -12,7 +12,7 @@
           <hr class="my-4">
           <div class="row">
             <div class="col-md-6">
-              <div class="card" style="width: 18rem;">
+              <div class="card mt-4" style="width: 18rem;">
                 <div class="card-body card-height">
                   <h5 class="card-title">Select your preferences</h5>
                   <p class="card-text ">
@@ -30,7 +30,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="card" style="width: 18rem;">
+              <div class="card mt-4" style="width: 18rem;">
                 <div class="card-body card-height">
                   <h5 id='card-title-id' class="card-title">List of booked tables on:</h5>
                   <h6 id="date-selection" class="card-subtitle mb-2 text-muted">Select a date</h6>
