Eliminate non used colours from CSS file

--- a/book_table/templates/index.html
+++ b/book_table/templates/index.html
@@ -15,7 +15,7 @@
   </div>
 </section>
 
-<section class="info-carousel salmon-color">
+<section class="info-carousel salmon-filter">
 
   <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center white-text dark-brown  "
     data-ride="carousel">
